# sclicom

./: .buildinfo  .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CNAME  README.md  adding_new_data.html  config.yml  contributing.html  convert_images.html  create_masks.html  environment.yml  genindex.html  getting_started.html  index.html  logging.html  making_splits.html  notebooks.html  objects.inv  project.ini  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  docs-request.md  experiment-proposal.md
.github/workflows/: main.yml  pages.yml
_autosummary/: dpat.cli.dpat_trainer_cli.DpatTrainerCLI.html  dpat.cli.dpat_trainer_cli.html  dpat.cli.html  dpat.cli.logging.config_logging.html  dpat.cli.logging.html  dpat.cli.mil_cli.MILTrainCLI.html  dpat.cli.mil_cli.html  dpat.cli.pretrain_cli.PreTrainCLI.html  dpat.cli.pretrain_cli.html  dpat.configs.config.get_default_config_by_name.html  dpat.configs.config.html  dpat.configs.html  dpat.configs.omegaconf.html  dpat.configs.omegaconf.register_conf_resolvers.html  dpat.convert.AvailableImageFormats.html  dpat.convert.ToOtherParams.html  dpat.convert.ToTIFFParams.html  dpat.convert.batch_convert.html  dpat.convert.filter_existing.html  dpat.convert.hhg.hhg_batch_convert.html  dpat.convert.hhg.html  dpat.convert.html  dpat.convert.img_to_tiff.html  dpat.data.html  dpat.data.pmc_tile_dataset.MaskGetter.html  dpat.data.pmc_tile_dataset.PMCHHGImageDataModule.html  dpat.data.pmc_tile_dataset.PMCHHGImageDataset.html  dpat.data.pmc_tile_dataset.html  dpat.data.pmc_tile_dataset.online_mean_and_std.html  dpat.data.pmchhg_h5_dataset.CarefulHDF5.html  dpat.data.pmchhg_h5_dataset.PMCHHGH5DataModule.html  dpat.data.pmchhg_h5_dataset.PMCHHGH5Dataset.html  dpat.data.pmchhg_h5_dataset.compile_features.html  dpat.data.pmchhg_h5_dataset.feature_batch_extract.html  dpat.data.pmchhg_h5_dataset.generate_embeddings.html  dpat.data.pmchhg_h5_dataset.html  dpat.data.transforms.AvailableTransforms.html  dpat.data.transforms.Dlup2DpatTransform.html  dpat.data.transforms.html  dpat.exceptions.DpatDecompressionBombError.html  (+43 more)
_sources/: adding_new_data.rst.txt  contributing.rst.txt  convert_images.rst.txt  create_masks.rst.txt  getting_started.rst.txt  index.rst.txt
_sources/_autosummary/: dpat.cli.dpat_trainer_cli.DpatTrainerCLI.rst.txt  dpat.cli.dpat_trainer_cli.rst.txt  dpat.cli.logging.config_logging.rst.txt  dpat.cli.logging.rst.txt  dpat.cli.mil_cli.MILTrainCLI.rst.txt  dpat.cli.mil_cli.rst.txt  dpat.cli.pretrain_cli.PreTrainCLI.rst.txt  dpat.cli.pretrain_cli.rst.txt  dpat.cli.rst.txt  dpat.configs.config.get_default_config_by_name.rst.txt  dpat.configs.config.rst.txt  dpat.configs.omegaconf.register_conf_resolvers.rst.txt  dpat.configs.omegaconf.rst.txt  dpat.configs.rst.txt  dpat.convert.AvailableImageFormats.rst.txt  dpat.convert.ToOtherParams.rst.txt  dpat.convert.ToTIFFParams.rst.txt  dpat.convert.batch_convert.rst.txt  dpat.convert.filter_existing.rst.txt  dpat.convert.hhg.hhg_batch_convert.rst.txt  dpat.convert.hhg.rst.txt  dpat.convert.img_to_tiff.rst.txt  dpat.convert.rst.txt  dpat.data.pmc_tile_dataset.MaskGetter.rst.txt  dpat.data.pmc_tile_dataset.PMCHHGImageDataModule.rst.txt  dpat.data.pmc_tile_dataset.PMCHHGImageDataset.rst.txt  dpat.data.pmc_tile_dataset.online_mean_and_std.rst.txt  dpat.data.pmc_tile_dataset.rst.txt  dpat.data.pmchhg_h5_dataset.CarefulHDF5.rst.txt  dpat.data.pmchhg_h5_dataset.PMCHHGH5DataModule.rst.txt  dpat.data.pmchhg_h5_dataset.PMCHHGH5Dataset.rst.txt  dpat.data.pmchhg_h5_dataset.compile_features.rst.txt  dpat.data.pmchhg_h5_dataset.feature_batch_extract.rst.txt  dpat.data.pmchhg_h5_dataset.generate_embeddings.rst.txt  dpat.data.pmchhg_h5_dataset.rst.txt  dpat.data.rst.txt  dpat.data.transforms.AvailableTransforms.rst.txt  dpat.data.transforms.Dlup2DpatTransform.rst.txt  dpat.data.transforms.rst.txt  dpat.exceptions.DpatDecompressionBombError.rst.txt  (+43 more)
_static/: documentation_options.js
configs/: test.yaml
docs/source/: adding_new_data.rst  conf.py  convert_images.rst  getting_started.rst  index.rst  logging.rst  making_splits.rst  notebooks.rst
dpat/: __init__.py  exceptions.py  types.py
dpat/cli/: __init__.py  convert.py  create_splits.py  dpat_trainer_cli.py  logging.py  mil_cli.py  pretrain_cli copy.py  pretrain_cli.py
dpat/configs/: __init__.py  config.py  omegaconf.py
dpat/configs/defaults/: ccmil.yaml  extract-features.yaml  mil.yaml  varmil.yaml
dpat/convert/: __init__.py  hhg.py
dpat/data/: __init__.py  dataset.py  datasets.py  pmc_tile_dataset.py  pmchhg_h5_dataset.py  transformations.py  transforms.py
dpat/extract_features/: __init__.py  compile_features.py  datamodules.py  datasets.py  models.py  train.py  transformations.py  transforms.py
dpat/extract_features/models/: __init__.py  models.py  simclr.py  swav.py
dpat/extract_features/trainer/: __init__.py  pre_trainer.py
dpat/mask/: create_masks.py
dpat/mil/: __init__.py
dpat/mil/models/: __init__.py  ccmil.py  varmil.py
dpat/mil/trainer/: __init__.py  mil_trainer.py
dpat/splits/: __init__.py  create_splits.py
dpat/utils/: __init__.py  cudnn_auto_tuner.py  evaluation.py  float32_matmul_precision.py  seed_all.py
notebooks/: 10-sj-feature-extrapolation.ipynb  12-sj-summary-diagnoses.ipynb  13-sj-apply-masks.ipynb  14-sj-demography-per-fold.ipynb  14-sj-entropy-per-fold.ipynb  15-sj-tsne-cc.ipynb  2-sj-distance-extracted-features.ipynb  3-sj-visualize-features.ipynb  4-sj-loss-curves-scratch.ipynb  5-sj-masking.ipynb  6-sjg-attention.ipynb  7-sj-clinical-text-embeddings.ipynb  8-sj-add-cc-to-hdf5.ipynb  9-sj-get-single-tiles.ipynb  snellius-simclr-15-3-2023.csv
notebooks/inputs/5/: 2022-09-29_PMC_HHG_9_Hersenen_I-04_25x25_300fast.geojson  (+7 more)
tests/: __init__.py  common.py  test_convert.py  test_create_splits.py
tools/: calc_mean_and_std.py  create_masks.py
tools/denoising/: predict_N2V.py  train_N2V2.py
tools/extract_features/: compile_features.py  train.py
tools/mil/: hparam_tuner.py  test.py  train.py  validate.py
(+26 files in other folders)
